DTSPB-1965 CCD SS automation changes